src/rd_parser.py
"""
rd_parser.py - Recursive Descent Parser for the Decaf mini-compiler.

One method per non-terminal from the Decaf LL(1) grammar.
Builds a dict-based AST, populates the symbol table, and reports errors
via the error handler. Uses panic-mode recovery with FOLLOW sets.
"""

import os
import sys

sys.path.insert(0, os.path.dirname(__file__))

from tokens import Token, TokenType
from symbol_table import SymbolEntry


# ---------------------------------------------------------------------------
# FOLLOW sets (abbreviated) used for panic-mode recovery in each NT
# ---------------------------------------------------------------------------
FOLLOW = {
    'Program':       {'$'},
    'DeclList':      {'$'},
    'Decl':          {'int', 'double', 'bool', 'string', 'void', 'class', 'interface',
                      'id', '$'},
    'VarDecl':       {'int', 'double', 'bool', 'string', 'void', 'class', 'interface',
                      'id', '}', '$'},
    'FuncDecl':      {'int', 'double', 'bool', 'string', 'void', 'class', 'interface',
                      'id', '}', '$'},
    'RetType':       {'id'},
    'Type':          {'id', ';', ',', '(', ')'},
    'TypeSuffix':    {'id', ';', ',', '(', ')'},
    'Formals':       {')'},
    'ParamList':     {')'},
    'ParamTail':     {')'},
    'Param':         {')', ','},
    'ClassDecl':     {'int', 'double', 'bool', 'string', 'void', 'class', 'interface',
                      'id', '$'},
    'ClassBase':     {'implements', '{'},
    'ClassImpl':     {'{'},
    'IdentList':     {'{'},
    'IdentListTail': {'{'},
    'FieldList':     {'}'},
    'Field':         {'int', 'double', 'bool', 'string', 'void', 'id', '}'},
    'InterfaceDecl': {'int', 'double', 'bool', 'string', 'void', 'class', 'interface',
                      'id', '$'},
    'ProtoList':     {'}'},
    'Proto':         {'int', 'double', 'bool', 'string', 'void', 'id', '}'},
    'Block':         {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', 'id', '$'},
    'StmtList':      {'}'},
    'Stmt':          {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', 'id', ';', 'else', '$'},
    'ExprStmt':      {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', '$'},
    'IfStmt':        {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', 'else', '$'},
    'ElsePart':      {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', 'else', '$'},
    'WhileStmt':     {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', '$'},
    'ForStmt':       {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', '$'},
    'ForInit':       {';'},
    'ForUpdate':     {')'},
    'ReturnStmt':    {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', '$'},
    'RetExprOpt':    {';'},
    'BreakStmt':     {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', '$'},
    'PrintStmt':     {'int', 'double', 'bool', 'string', 'if', 'while', 'for',
                      'return', 'break', 'Print', '{', '}', '$'},
    'ExprList':      {')'},
    'ExprListTail':  {')'},
    'Expr':          {';', ')', ',', ']'},
    'AssignTail':    {';', ')', ',', ']'},
    'OrExpr':        {';', ')', ',', ']', '='},
    'OrTail':        {';', ')', ',', ']', '='},
    'AndExpr':       {';', ')', ',', ']', '=', '||'},
    'AndTail':       {';', ')', ',', ']', '=', '||'},
    'EqExpr':        {';', ')', ',', ']', '=', '||', '&&'},
    'EqTail':        {';', ')', ',', ']', '=', '||', '&&'},
    'RelExpr':       {';', ')', ',', ']', '=', '||', '&&', '==', '!='},
    'RelTail':       {';', ')', ',', ']', '=', '||', '&&', '==', '!='},
    'AddExpr':       {';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>='},
    'AddTail':       {';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>='},
    'MulExpr':       {';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>=', '+', '-'},
    'MulTail':       {';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>=', '+', '-'},
    'UnaryExpr':     {';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>=', '+', '-', '*', '/', '%'},
    'PostExpr':      {';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>=', '+', '-', '*', '/', '%'},
    'PostTail':      {';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>=', '+', '-', '*', '/', '%'},
    'CallTail':      {'[', '.', ';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>=', '+', '-', '*', '/', '%'},
    'Primary':       {'[', '.', ';', ')', ',', ']', '=', '||', '&&', '==', '!=',
                      '<', '<=', '>', '>=', '+', '-', '*', '/', '%'},
    'ActualList':    {')'},
}

# FIRST sets for deciding which production to use
# (only the sets we need for dispatch in the parser methods)
FIRST_TYPE = {TokenType.KW_INT, TokenType.KW_DOUBLE, TokenType.KW_BOOL,
              TokenType.KW_STRING, TokenType.IDENTIFIER}
FIRST_RETTYPE = FIRST_TYPE | {TokenType.KW_VOID}
FIRST_STMT_NONDECL = {
    TokenType.KW_IF, TokenType.KW_WHILE, TokenType.KW_FOR,
    TokenType.KW_RETURN, TokenType.KW_BREAK, TokenType.KW_PRINT,
    TokenType.LBRACE,
    # Expression starters
    TokenType.IDENTIFIER, TokenType.INT_CONST, TokenType.DOUBLE_CONST,
    TokenType.BOOL_CONST, TokenType.STRING_CONST,
    TokenType.KW_NULL, TokenType.KW_THIS, TokenType.LPAREN,
    TokenType.KW_READINTEGER, TokenType.KW_READLINE,
    TokenType.KW_NEW, TokenType.KW_NEWARRAY,
    TokenType.MINUS, TokenType.NOT,
}
FIRST_EXPR = {
    TokenType.IDENTIFIER, TokenType.INT_CONST, TokenType.DOUBLE_CONST,
    TokenType.BOOL_CONST, TokenType.STRING_CONST,
    TokenType.KW_NULL, TokenType.KW_THIS, TokenType.LPAREN,
    TokenType.KW_READINTEGER, TokenType.KW_READLINE,
    TokenType.KW_NEW, TokenType.KW_NEWARRAY,
    TokenType.MINUS, TokenType.NOT,
}


def make_node(kind, children=None, value=None, line=None, col=None):
    """Create an AST node dict."""
    node = {'type': kind, 'children': children or [], 'value': value}
    if line is not None:
        node['line'] = line
    if col is not None:
        node['col'] = col
    return node


class RecursiveDescentParser:
    """
    Hand-written recursive descent parser for Decaf.

    Each parse_X() method corresponds to non-terminal X and returns an AST node.
    Errors are reported via self.eh and recovery skips to the FOLLOW set.
    Symbol table is populated on declarations.
    """

    def __init__(self, lexer, symbol_table, error_handler):
        self.lexer = lexer
        self.st = symbol_table
        self.eh = error_handler
        self.current = None
        self.tokens_parsed = 0
        self._current_function_return_type = None
        self._in_loop = 0
        self.advance()  # load first token

    # ------------------------------------------------------------------
    # Core helpers
    # ------------------------------------------------------------------

    def advance(self):
        self.current = self.lexer.next_token()
        self.tokens_parsed += 1

    def peek(self):
        return self.lexer.peek_token()

    def match(self, expected_type: TokenType) -> Token:
        """Consume and return current token if it matches expected_type."""
        if self.current.type == expected_type:
            tok = self.current
            self.advance()
            return tok
        else:
            suggestion = self.eh.phrase_level_suggest(
                expected_type.name, self.current.type.name)
            self.eh.report_error(
                'SYNTAX',
                f"Expected {expected_type.name}, got {self.current.type.name} "
                f"('{self.current.value}'). {suggestion}",
                self.current.line, self.current.col)
            # Return a fake token for error recovery (don't advance)
            return Token(expected_type, None, self.current.line, self.current.col)

    def match_sym(self, sym_str: str) -> Token:
        """Match by grammar symbol string (e.g., ';', 'id')."""
        gs = self.current.grammar_symbol()
        if gs == sym_str:
            tok = self.current
            self.advance()
            return tok
        else:
            self.eh.report_error(
                'SYNTAX',
                f"Expected '{sym_str}', got '{gs}' ('{self.current.value}')",
                self.current.line, self.current.col)
            return Token(TokenType.ERROR, None, self.current.line, self.current.col)

    def _sync(self, follow_set: set):
        """Panic-mode recovery: skip tokens until one in follow_set."""
        while (self.current.type != TokenType.EOF and
               self.current.grammar_symbol() not in follow_set):
            self.advance()

    def _cur_sym(self) -> str:
        return self.current.grammar_symbol()

    def _cur_is(self, *types) -> bool:
        return self.current.type in types

    # ------------------------------------------------------------------
    # Entry point
    # ------------------------------------------------------------------

    def parse(self):
        ast = self.parse_program()
        if self.current.type != TokenType.EOF:
            self.eh.report_error(
                'SYNTAX', 'Unexpected tokens after program end',
                self.current.line, self.current.col)
        return ast

    # ------------------------------------------------------------------
    # Grammar rules
    # ------------------------------------------------------------------

    def parse_program(self):
        """Program -> DeclList"""
        line, col = self.current.line, self.current.col
        children = [self.parse_decl_list()]
        return make_node('Program', children, line=line, col=col)

    def parse_decl_list(self):
        """DeclList -> Decl DeclList | ε"""
        children = []
        # FIRST(Decl) = FIRST_RETTYPE ∪ {class, interface}
        while self.current.type in (FIRST_RETTYPE |
                                    {TokenType.KW_CLASS, TokenType.KW_INTERFACE}):
            children.append(self.parse_decl())
        return make_node('DeclList', children)

    def parse_decl(self):
        """Decl -> VarDecl | FuncDecl | ClassDecl | InterfaceDecl"""
        if self.current.type == TokenType.KW_CLASS:
            return self.parse_class_decl()
        if self.current.type == TokenType.KW_INTERFACE:
            return self.parse_interface_decl()

        # Disambiguate VarDecl vs FuncDecl:
        # RetType id ; -> VarDecl (if type followed by id followed by ;)
        # RetType id ( -> FuncDecl
        # void always -> FuncDecl
        if self.current.type == TokenType.KW_VOID:
            return self.parse_func_decl()

        # Type id ; vs Type id (
        # We need to look ahead 2 tokens: Type id [; or (]
        # After parsing Type and id, the next token decides.
        # We use a save/restore approach via lexer peeking — instead,
        # we parse RetType, then peek at what follows the id.
        # Since Type can consume multiple tokens (e.g., int[][]),
        # we speculatively parse and branch on the token after id.
        return self._parse_var_or_func_decl()

    def _parse_var_or_func_decl(self):
        """Parse VarDecl or FuncDecl by looking ahead after type+id."""
        # Save state is not straightforward; instead peek after type tokens.
        # Heuristic: after type tokens and an identifier, if '(' follows -> FuncDecl.
        # We parse Type, then id, then decide.

        line, col = self.current.line, self.current.col
        type_node = self.parse_type()
        type_str = type_node.get('value', '?')

        if self.current.type != TokenType.IDENTIFIER:
            self.eh.report_error('SYNTAX',
                f"Expected identifier after type, got '{self.current.value}'",
                self.current.line, self.current.col)
            self._sync(FOLLOW['Decl'])
            return make_node('ErrorDecl', line=line, col=col)

        id_tok = self.current
        self.advance()

        if self.current.type == TokenType.SEMICOLON:
            # VarDecl: Type id ;
            self.advance()  # consume ;
            entry = SymbolEntry(id_tok.value, 'variable', type_str,
                                self.st.scope_level, id_tok.line, id_tok.col)
            if not self.st.insert(entry):
                self.eh.report_error('SEMANTIC',
                    f"Duplicate declaration of '{id_tok.value}'",
                    id_tok.line, id_tok.col)
            return make_node('VarDecl',
                             [type_node, make_node('id', value=id_tok.value,
                                                   line=id_tok.line)],
                             value=id_tok.value, line=line, col=col)

        elif self.current.type == TokenType.LPAREN:
            # FuncDecl: RetType id ( Formals ) Block
            return self._finish_func_decl(type_node, id_tok, type_str, line, col)
        else:
            self.eh.report_error('SYNTAX',
                f"Expected ';' or '(' after '{id_tok.value}', "
                f"got '{self.current.value}'",
                self.current.line, self.current.col)
            self._sync(FOLLOW['Decl'])
            return make_node('ErrorDecl', line=line, col=col)

    def _finish_func_decl(self, type_node, id_tok, return_type, line, col):
        """Complete FuncDecl after RetType id already consumed."""
        self.match(TokenType.LPAREN)
        self.st.enter_scope(f'func_{id_tok.value}')
        formals_node = self.parse_formals()
        self.match(TokenType.RPAREN)

        # Register function in outer scope before entering body
        # Build param type list
        param_types = []
        for child in formals_node.get('children', []):
            if child and child.get('type') == 'Param':
                pt = child.get('value', 'unknown')
                param_types.append(pt)

        # Insert into symbol table (parent scope)
        # Exit current scope temporarily to insert at parent level
        current_scope_entries = {}
        # Actually insert in parent scope (level - 1)
        func_entry = SymbolEntry(id_tok.value, 'function', return_type,
                                 self.st.scope_level - 1, id_tok.line, id_tok.col)
        func_entry.attributes['return_type'] = return_type
        func_entry.attributes['param_types'] = param_types
        # Insert in the scope before current (parent scope)
        parent_scope = self.st.scopes[-2] if len(self.st.scopes) >= 2 else self.st.scopes[0]
        if id_tok.value in parent_scope:
            self.eh.report_error('SEMANTIC',
                f"Duplicate function declaration '{id_tok.value}'",
                id_tok.line, id_tok.col)
        else:
            func_entry.scope_level = self.st.scope_level - 1
            parent_scope[id_tok.value] = func_entry

        prev_ret = self._current_function_return_type
        self._current_function_return_type = return_type
        block_node = self.parse_block()
        self._current_function_return_type = prev_ret

        self.st.exit_scope()

        return make_node('FuncDecl',
                         [type_node,
                          make_node('id', value=id_tok.value, line=id_tok.line),
                          formals_node, block_node],
                         value=id_tok.value, line=line, col=col)

    def parse_var_decl(self):
        """VarDecl -> Type id ;"""
        line, col = self.current.line, self.current.col
        type_node = self.parse_type()
        type_str = type_node.get('value', '?')
        id_tok = self.match(TokenType.IDENTIFIER)
        self.match(TokenType.SEMICOLON)

        entry = SymbolEntry(id_tok.value if id_tok.value else '?',
                            'variable', type_str,
                            self.st.scope_level, id_tok.line, id_tok.col)
        if id_tok.value and not self.st.insert(entry):
            self.eh.report_error('SEMANTIC',
                f"Duplicate declaration of '{id_tok.value}'",
                id_tok.line, id_tok.col)

        return make_node('VarDecl',
                         [type_node, make_node('id', value=id_tok.value,
                                               line=id_tok.line)],
                         value=id_tok.value, line=line, col=col)

    def parse_func_decl(self):
        """FuncDecl -> RetType id ( Formals ) Block"""
        line, col = self.current.line, self.current.col
        ret_type_node = self.parse_ret_type()
        ret_type_str = ret_type_node.get('value', 'void')
        id_tok = self.match(TokenType.IDENTIFIER)
        return self._finish_func_decl(ret_type_node, id_tok, ret_type_str, line, col)

    def parse_ret_type(self):
        """RetType -> Type | void"""
        if self.current.type == TokenType.KW_VOID:
            tok = self.current
            self.advance()
            return make_node('RetType', value='void', line=tok.line, col=tok.col)
        return make_node('RetType', [self.parse_type()],
                         value=self._type_str_from_type_node(None))
